--- a/index.html
+++ b/index.html
@@ -29,29 +29,17 @@
         <article class="project">
             <h3>CANSAT (Educational Project)</h3>
             <p>
-                Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes.
+                <img src="images/itu4.jpg" alt="Cansat prototype chassis" class="inline-image float-right">
+                Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes. This foundational project prepared us for more complex challenges.
             </p>
-            <div class="gallery">
-                <div class="gallery-item"><img src="images/itu2.jpg" alt="Cansat electronics development"><div class="image-caption">Electronics Development</div></div>
-                <div class="gallery-item"><img src="images/itu1.png" alt="Cansat team working on the project"><div class="image-caption">Team Work</div></div>
-                <div class="gallery-item"><img src="images/itu3.jpg" alt="Presenting the Cansat sensors"><div class="image-caption">Project Presentation</div></div>
-                <div class="gallery-item"><img src="images/itu4.jpg" alt="Cansat prototype chassis"><div class="image-caption">Cansat Prototype</div></div>
-            </div>
         </article>
 
         <article class="project">
             <h3>KAYSAT KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
             <p>
+                <img src="images/Tasiyici2.jpg" alt="Assembled Kaysat carrier system" class="inline-image float-left">
                 KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
-            <div class="gallery">
-                <div class="gallery-item"><img src="images/Tasiyici1.jpg" alt="Kaysat carrier and payload system components"><div class="image-caption">Payload & Carrier Systems</div></div>
-                <div class="gallery-item"><img src="images/Tasiyici2.jpg" alt="Assembled Kaysat carrier system"><div class="image-caption">Assembled Carrier</div></div>
-                <div class="gallery-item"><img src="images/Ekip1.jpeg" alt="Kaysat team at an event"><div class="image-caption">KAYSat Team</div></div>
-                <div class="gallery-item"><img src="images/Ali1.png" alt="Presenting the Kaysat project"><div class="image-caption">Project Presentation</div></div>
-                <div class="gallery-item"><img src="images/sunum1.png" alt="KAYSAT Project Presentation 1"><div class="image-caption">Presentation Detail 1</div></div>
-                <div class="gallery-item"><img src="images/sunum2.png" alt="KAYSAT Project Presentation 2"><div class="image-caption">Presentation Detail 2</div></div>
-            </div>
         </article>
 
         <article class="project">
@@ -60,43 +48,35 @@
             
             <h4>Project Purpose</h4>
             <p>
+                <img src="images/Ncts1.jpg" alt="NOCTUS-06 Satellite" class="inline-image float-right">
                 NOCTUS-06 is a ground-based CubeSat prototype, designed in a 1U format, that collects atmospheric data (temperature, pressure, humidity, CO2, methane, etc.) and transmits this data instantly to a ground station via RF telemetry. This project was undertaken to demonstrate the capabilities for developing low-cost satellite systems and data acquisition platforms.
             </p>
-
-            <h4>Technical Specifications</h4>
-            <ul>
-                <li><strong>Sensors:</strong> BME280 (Temperature, Pressure, Humidity), MH-Z19 (CO2), MQ-4 (Methane), MQ-9 (Propane), MPU6050 (3-Axis Gyro & Accelerometer)</li>
-                <li><strong>Positioning:</strong> GY-NEO6MV2 GPS Module</li>
-                <li><strong>Processor:</strong> Arduino Mega 2560 Pro Mini</li>
-                <li><strong>Communication:</strong> RF900 Ultra Long Range Radio Modem (Telemetry)</li>
-                <li><strong>Power:</strong> 2x 18650 Li-ion Battery (7.4V), 5V DC-DC Converter</li>
-            </ul>
 
             <h4>Core Platform Capabilities</h4>
             <ul class="capabilities-list">
                 <li>
-                    <strong>🛰️ CubeSat (NOCTUS-06):</strong> Within the 1U chassis, which I personally designed and 3D modeled using SolidWorks, it precisely measures critical data once per second, such as temperature, humidity, pressure, carbon dioxide (CO2), various gases (methane & propane), 3-axis acceleration & gyroscope, GPS position, and system current.
+                    <strong>🛰️ CubeSat (NOCTUS-06):</strong> Within the 1U chassis, which I personally designed and 3D modeled using SolidWorks, it precisely measures critical data once per second.
                 </li>
                 <li>
-                    <strong>📡 Real-Time Data Stream:</strong> All telemetry data collected from the satellite is packaged in JSON format and transmitted instantly to the ground station via RF telemetry modules.
+                    <strong>📡 Real-Time Data Stream:</strong> All telemetry data is packaged in JSON format and transmitted instantly to the ground station.
                 </li>
                 <li>
-                    <strong>🖥️ Desktop User Interface (GUI):</strong> The desktop GUI application, which I developed using Electron.js and Flask (Python), visualizes incoming live data in a modern and user-friendly interface, displays the satellite's position on a map, and presents sensor data with real-time graphs.
+                     <img src="images/Ncts2.jpg" alt="Ground Station" class="inline-image float-left">
+                    <strong>🖥️ Desktop User Interface (GUI):</strong> The desktop GUI application, which I developed using Electron.js and Flask (Python), visualizes incoming live data, displays the satellite's position on a map, and presents sensor data with real-time graphs.
                 </li>
                 <li>
-                    <strong>💾 Dual-Layer Data Storage:</strong> For reliability and data integrity, I established a dual-layer storage architecture. All telemetry data is saved both to the onboard SD card in CSV format and simultaneously stored in the cloud on Firebase.
+                    <strong>💾 Dual-Layer Data Storage:</strong> For reliability and data integrity, I established a dual-layer storage architecture saving data to an onboard SD card and simultaneously to the cloud on Firebase.
                 </li>
             </ul>
 
-            <h4>Project Gallery</h4>
-            <div class="gallery">
-                <div class="gallery-item"><img src="images/Ncts1.jpg" alt="NOCTUS-06 Satellite"><div class="image-caption">Prototype Structure</div></div>
-                <div class="gallery-item"><img src="images/Ncts2.jpg" alt="Ground Station"><div class="image-caption">Ground Station View</div></div>
-                <div class="gallery-item"><img src="images/Ncts3.jpg" alt="Map View"><div class="image-caption">Map View</div></div>
-                <div class="gallery-item"><img src="images/Ncts4.jpeg" alt="Development Process"><div class="image-caption">The Process of Hardware Development</div></div>
-                <div class="gallery-item"><img src="images/Ncts5.jpeg" alt="Circuit Detail"><div class="image-caption">Circuit Detail</div></div>
-                <div class="gallery-item"><img src="images/firebase_data.png" alt="Firebase Storage"><div class="image-caption">Firebase Data Storage</div></div>
-            </div>
+            <h4>Technical Specifications</h4>
+            <ul>
+                <li><strong>Sensors:</strong> BME280 (Temp, Pressure, Humidity), MH-Z19 (CO2), MQ-4 (Methane), MQ-9 (Propane), MPU6050 (3-Axis Gyro & Accel)</li>
+                <li><strong>Positioning:</strong> GY-NEO6MV2 GPS Module</li>
+                <li><strong>Processor:</strong> Arduino Mega 2560 Pro Mini</li>
+                <li><strong>Communication:</strong> RF900 Ultra Long Range Radio Modem</li>
+                <li><strong>Power:</strong> 2x 18650 Li-ion Battery (7.4V), 5V DC-DC Converter</li>
+            </ul>
 
             <h4>Conclusion and Learnings</h4>
             <p>
