--- a/index.html
+++ b/index.html
@@ -29,54 +29,78 @@
         <article class="project">
             <h3>CANSAT (Educational Project)</h3>
             <p>
-                <img src="images/itu4.jpg" alt="Cansat prototype chassis" class="inline-image float-right">
-                Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes. This foundational project prepared us for more complex challenges.
+                Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes.
             </p>
+            <div class="project-gallery">
+                <img src="images/itu2.jpg" alt="Cansat electronics development">
+                <img src="images/itu1.png" alt="Cansat team working on the project">
+                <img src="images/itu3.jpg" alt="Presenting the Cansat sensors">
+                <img src="images/itu4.jpg" alt="Cansat prototype chassis">
+            </div>
         </article>
 
         <article class="project">
             <h3>KAYSAT KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
             <p>
-                <img src="images/Tasiyici2.jpg" alt="Assembled Kaysat carrier system" class="inline-image float-left">
                 KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
+            <div class="project-gallery">
+                <img src="images/Tasiyici1.jpg" alt="Kaysat carrier and payload system components">
+                <img src="images/Tasiyici2.jpg" alt="Assembled Kaysat carrier system">
+                <img src="images/Ekip1.jpeg" alt="Kaysat team at an event">
+                <img src="images/Ali1.png" alt="Presenting the Kaysat project">
+                <img src="images/sunum1.png" alt="KAYSAT Project Presentation 1">
+                <img src="images/sunum2.png" alt="KAYSAT Project Presentation 2">
+            </div>
         </article>
 
         <article class="project">
             <h3>NOCTUS-06 Functional CubeSat and <br> Ground Station Platform</h3>
             <p><em>Developed by: Ali Berkant Eker</em></p>
             
-            <h4>Project Purpose</h4>
-            <p>
-                <img src="images/Ncts1.jpg" alt="NOCTUS-06 Satellite" class="inline-image float-right">
-                NOCTUS-06 is a ground-based CubeSat prototype, designed in a 1U format, that collects atmospheric data (temperature, pressure, humidity, CO2, methane, etc.) and transmits this data instantly to a ground station via RF telemetry. This project was undertaken to demonstrate the capabilities for developing low-cost satellite systems and data acquisition platforms.
-            </p>
+            <div class="media-block">
+                <div class="media-text">
+                    <h4>Project Purpose</h4>
+                    <p>
+                        NOCTUS-06 is a ground-based CubeSat prototype, designed in a 1U format, that collects atmospheric data (temperature, pressure, humidity, CO2, methane, etc.) and transmits this data instantly to a ground station via RF telemetry. This project was undertaken to demonstrate the capabilities for developing low-cost satellite systems and data acquisition platforms.
+                    </p>
+                </div>
+                <div class="media-image">
+                    <img src="images/Ncts1.jpg" alt="NOCTUS-06 Satellite">
+                </div>
+            </div>
 
-            <h4>Core Platform Capabilities</h4>
-            <ul class="capabilities-list">
-                <li>
-                    <strong>🛰️ CubeSat (NOCTUS-06):</strong> Within the 1U chassis, which I personally designed and 3D modeled using SolidWorks, it precisely measures critical data once per second.
-                </li>
-                <li>
-                    <strong>📡 Real-Time Data Stream:</strong> All telemetry data is packaged in JSON format and transmitted instantly to the ground station.
-                </li>
-                <li>
-                     <img src="images/Ncts2.jpg" alt="Ground Station" class="inline-image float-left">
-                    <strong>🖥️ Desktop User Interface (GUI):</strong> The desktop GUI application, which I developed using Electron.js and Flask (Python), visualizes incoming live data, displays the satellite's position on a map, and presents sensor data with real-time graphs.
-                </li>
-                <li>
-                    <strong>💾 Dual-Layer Data Storage:</strong> For reliability and data integrity, I established a dual-layer storage architecture saving data to an onboard SD card and simultaneously to the cloud on Firebase.
-                </li>
-            </ul>
+            <div class="media-block">
+                 <div class="media-image">
+                    <img src="images/Ncts2.jpg" alt="Ground Station">
+                </div>
+                <div class="media-text">
+                    <h4>Core Platform Capabilities</h4>
+                    <ul>
+                        <li><strong>🛰️ CubeSat (NOCTUS-06):</strong> 1U chassis designed in SolidWorks, measures critical data once per second.</li>
+                        <li><strong>📡 Real-Time Data Stream:</strong> Data is packaged in JSON format and transmitted instantly via RF telemetry.</li>
+                        <li><strong>🖥️ Desktop User Interface (GUI):</strong> Custom GUI visualizes live data, map positions, and real-time graphs.</li>
+                        <li><strong>💾 Dual-Layer Data Storage:</strong> Data is saved to an onboard SD card and simultaneously stored on Firebase.</li>
+                    </ul>
+                </div>
+            </div>
 
             <h4>Technical Specifications</h4>
             <ul>
-                <li><strong>Sensors:</strong> BME280 (Temp, Pressure, Humidity), MH-Z19 (CO2), MQ-4 (Methane), MQ-9 (Propane), MPU6050 (3-Axis Gyro & Accel)</li>
+                <li><strong>Sensors:</strong> BME280, MH-Z19, MQ-4, MQ-9, MPU6050</li>
                 <li><strong>Positioning:</strong> GY-NEO6MV2 GPS Module</li>
                 <li><strong>Processor:</strong> Arduino Mega 2560 Pro Mini</li>
                 <li><strong>Communication:</strong> RF900 Ultra Long Range Radio Modem</li>
                 <li><strong>Power:</strong> 2x 18650 Li-ion Battery (7.4V), 5V DC-DC Converter</li>
             </ul>
+
+            <h4>Additional Project Images</h4>
+             <div class="project-gallery">
+                <img src="images/Ncts3.jpg" alt="Map View">
+                <img src="images/Ncts4.jpeg" alt="Development Process">
+                <img src="images/Ncts5.jpeg" alt="Circuit Detail">
+                <img src="images/firebase_data.png" alt="Firebase Storage">
+            </div>
 
             <h4>Conclusion and Learnings</h4>
             <p>
