--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </article>
 
         <article class="project">
-            <h3>KAYSAT KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
+            <h3>KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
             <p>
                 KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
@@ -75,7 +75,7 @@
                     <img src="images/Ncts2.jpg" alt="Ground Station">
                 </div>
                 <div class="media-text">
-                    <h4>Core Platform Capabilities</h4>
+                    <h3>Core Platform Capabilities</h3>
                     <ul>
                         <li><strong>🛰️ CubeSat (NOCTUS-06):</strong> 1U chassis designed in SolidWorks, measures critical data once per second.</li>
                         <li><strong>📡 Real-Time Data Stream:</strong> Data is packaged in JSON format and transmitted instantly via RF telemetry.</li>
@@ -87,7 +87,7 @@
 
             <div class="media-block">
                 <div class="media-text">
-                    <h4>Technical Specifications</h4>
+                    <h3>Technical Specifications</h3>
                     <ul>
                         <li><strong>Sensors:</strong> BME280, MH-Z19, MQ-4, MQ-9, MPU6050</li>
                         <li><strong>Positioning:</strong> GY-NEO6MV2 GPS Module</li>
@@ -100,7 +100,7 @@
                     <img src="images/Ncts5.jpeg" alt="Circuit Detail">
                 </div>
             </div>
-            <h4>Additional Project Images</h4>
+            <h3>Additional Project Images</h3>
              <div class="project-gallery">
                 <img src="images/Ncts3.jpg" alt="Map View">
                 <img src="images/Ncts4.jpeg" alt="Development Process">
