--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </article>
 
         <article class="project">
-            <h3>KAYSAT KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
+            <h3>KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
             <p>
                 KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
