--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
             <p>
                 Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes.
             </p>
+
+            <img src="images/itu4.jpg" alt="CANSAT Model Satellite Showcase" class="showcase-image">
+
+            <p>
+                This hands-on project was a crucial first step for the team, establishing a strong foundation in satellite subsystems and mission operations. The experience gained here directly paved the way for our more advanced entry into the Teknofest competition.
+            </p>
+            
             <div class="project-gallery">
                 <img src="images/itu2.jpg" alt="Cansat electronics development">
                 <img src="images/itu1.png" alt="Cansat team working on the project">
                 <img src="images/itu3.jpg" alt="Presenting the Cansat sensors">
-                <img src="images/itu4.jpg" alt="Cansat prototype chassis">
             </div>
         </article>
 
         <article class="project">
-            <h3>KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
+            <h3>KAYSAT KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
             <p>
                 KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
@@ -100,6 +106,7 @@
                     <img src="images/Ncts5.jpeg" alt="Circuit Detail">
                 </div>
             </div>
+
             <h4>Additional Project Images</h4>
              <div class="project-gallery">
                 <img src="images/Ncts3.jpg" alt="Map View">
