--- a/index.html
+++ b/index.html
@@ -29,24 +29,35 @@
         <article class="project">
             <h3>CANSAT (Educational Project)</h3>
             <p>
-                Our first project as the KAYSat team was to develop a CANSAT, a model satellite the size of a soda can. Through this project, we gained valuable experience in collecting basic sensor data, transmitting it via telemetry, and processing this data. In this work, as Team Captain, I took part in coordinating the integration of electronic systems and the software development processes.
+                KAYSat ekibi olarak ilk projemiz, bir soda kutusu büyüklüğünde bir model uydu olan CANSAT'ı geliştirmekti. Bu proje sayesinde, temel sensör verilerini toplama, telemetri yoluyla iletme ve bu verileri işleme konusunda değerli deneyimler kazandık. Bu çalışmada, Takım Kaptanı olarak elektronik sistemlerin entegrasyonunun ve yazılım geliştirme süreçlerinin koordinasyonunda yer aldım.
             </p>
 
             <img src="images/itu4.jpg" alt="CANSAT Model Satellite Showcase" class="showcase-image">
 
             <p>
-                This hands-on project was a crucial first step for the team, establishing a strong foundation in satellite subsystems and mission operations. The experience gained here directly paved the way for our more advanced entry into the Teknofest competition.
+                Bu uygulamalı proje, ekibimiz için uydu alt sistemleri ve görev operasyonları konusunda güçlü bir temel oluşturan önemli bir ilk adımdı. Burada kazanılan deneyim, Teknofest yarışmasına daha ileri düzeyde katılmamızın yolunu doğrudan açtı.
             </p>
             
             <div class="project-gallery">
                 <img src="images/itu2.jpg" alt="Cansat electronics development">
                 <img src="images/itu1.png" alt="Cansat team working on the project">
-                <img src="images/itu3.jpg" alt="Presenting the Cansat sensors">
             </div>
-        </article>
+
+            <p>
+                CANSAT projesinin geliştirme sürecinde, hem teknik entegrasyonu başarıyla gerçekleştirdik hem de prototipimizi çeşitli testlerden geçirerek işlevselliğini doğruladık. Elde ettiğimiz bu başarılı sonuçları, üniversitemizdeki ilgili birimlerde yaptığımız sunumlarla akademik camia ile paylaştık. Bu sunumlar, projemizi daha geniş bir kitleye tanıtma ve geri bildirim alma fırsatı sundu.
+            </p>
+
+            <div class="media-block">
+                <div class="media-text">
+                    </div>
+                <div class="media-image">
+                    <img src="images/itu3.jpg" alt="Presenting the Cansat project">
+                </div>
+            </div>
+            </article>
 
         <article class="project">
-            <h3>KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
+            <h3>KAYSAT KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
             <p>
                 KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
