--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>
             As one of the founding members of the KAYSat Model Satellite Team, established in September 2022 under the leadership of our advisor, I have been actively involved since the project's inception. Currently, as Team Captain, I support the team's coordination and project planning. Furthermore, I contributed to the creation process of the "CubeSats and Space Technologies" course opened by my advisor, and I now serve as a co-instructor for its practical technical training sessions. As a team, we continue our work with an interdisciplinary approach.
         </p>
-        <div class="project-gallery">
+        <div class="project-gallery gallery-cover">
             <img src="images/Ekip2.jpg">
             <img src="images/ekip3.jpeg">
         </div>
@@ -110,7 +110,7 @@
                 <div class="media-text">
                     <h4>Technical Specifications</h4>
                     <ul>
-                        <li><strong>Sensors:</strong> BME280, MH-Z19, MQ-4, MQ-9, MPU6050</li>
+                        <li><strong>Sensors:</strong> BME280, MH-ZZ19, MQ-4, MQ-9, MPU6050</li>
                         <li><strong>Positioning:</strong> GY-NEO6MV2 GPS Module</li>
                         <li><strong>Processor:</strong> Arduino Mega 2560 Pro Mini</li>
                         <li><strong>Communication:</strong> RF900 Ultra Long Range Radio Modem</li>
