--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             As one of the founding members of the KAYSat Model Satellite Team, established in September 2022 under the leadership of our advisor, I have been actively involved since the project's inception. Currently, as Team Captain, I support the team's coordination and project planning. Furthermore, I contributed to the creation process of the "CubeSats and Space Technologies" course opened by my advisor, and I now serve as a co-instructor for its practical technical training sessions. As a team, we continue our work with an interdisciplinary approach.
         </p>
         <div class="project-gallery gallery-cover">
-            <img src="images/Ekip2.jpg">
+            <img src="images/Ekip4.png">
             <img src="images/ekip3.jpeg">
         </div>
     </section>
