--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
         <p>
             As one of the founding members of the KAYSat Model Satellite Team, established in September 2022 under the leadership of our advisor, I have been actively involved since the project's inception. Currently, as Team Captain, I support the team's coordination and project planning. Furthermore, I contributed to the creation process of the "CubeSats and Space Technologies" course opened by my advisor, and I now serve as a co-instructor for its practical technical training sessions. As a team, we continue our work with an interdisciplinary approach.
         </p>
-        <div class="project-gallery">
-            <img src="images/Ekip4.png">
-            <img src="images/ekip3.jpeg">
-        </div>
     </section>
 
     <hr>
@@ -47,7 +43,7 @@
                 <img src="images/itu1.png" alt="Cansat team working on the project">
             </div>
 
-            <div class="media-block media-block-wide-image space-above-lg">
+            <div class="media-block media-block-wide-image">
                 <div class="media-text">
                     <p>
                         During the CANSAT project's development, we successfully handled the technical integration and verified our prototype's functionality through various tests. We shared these successful results with the academic community through presentations at relevant departments in our university. These presentations offered a valuable opportunity to introduce our project to a wider audience and receive feedback.
@@ -61,7 +57,7 @@
         </article>
 
         <article class="project">
-            <h3>KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
+            <h3>KAYSAT KAYSAT Model Satellite and Carrier System <br> (Teknofest Model Satellite Competition)</h3>
             <p>
                 KAYSAT is a model satellite we developed for the TEKNOFEST 2023 Model Satellite Competition, designed to perform autonomous tasks according to the competition's requirements. In this project, alongside my responsibility as Team Captain, I also served as the Electrical Subsystem Designer. This process provided an opportunity to apply our theoretical knowledge in a competitive environment and to create a product as a team.
             </p>
