--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <p>
             As one of the founding members of the KAYSat Model Satellite Team, established in September 2022 under the leadership of our advisor, I have been actively involved since the project's inception. Currently, as Team Captain, I support the team's coordination and project planning. Furthermore, I contributed to the creation process of the "CubeSats and Space Technologies" course opened by my advisor, and I now serve as a co-instructor for its practical technical training sessions. As a team, we continue our work with an interdisciplinary approach.
         </p>
+          <div class="project-gallery">
+                <img src="images/Ekip4.png" alt="Cansat electronics development">
+                <img src="images/itu1.png" alt="Cansat team working on the project">
+            </div>
+        
     </section>
 
     <hr>
