--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
           <div class="project-gallery">
                 <img src="images/Ekip4.png" alt="Cansat electronics development">
-                <img src="images/itu1.png" alt="Cansat team working on the project">
+                <img src="images/ekip3.jpeg" alt="Cansat team working on the project">
             </div>
         
     </section>
@@ -50,6 +50,8 @@
 
             <div class="media-block media-block-wide-image space-above-lg">
                 <div class="media-text">
+                    <p>
+                    <p>
                     <p>
                         During the CANSAT project's development, we successfully handled the technical integration and verified our prototype's functionality through various tests. We shared these successful results with the academic community through presentations at relevant departments in our university. These presentations offered a valuable opportunity to introduce our project to a wider audience and receive feedback.
                     </p>
