--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </p>
           <div class="project-gallery">
                 <img src="images/Ekip4.png" alt="Cansat electronics development">
-                <img src="images/ekip3.jpeg" alt="Cansat team working on the project">
+                <img src="images/Cekip3.jpeg" alt="Cansat team working on the project">
             </div>
         
     </section>
