--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p>
                     <p>
                     <p>
-                        During the CANSAT project's development, we successfully handled the technical integration and verified our prototype's functionality through various tests. We shared these successful results with the academic community through presentations at relevant departments in our university. These presentations offered a valuable opportunity to introduce our project to a wider audience and receive feedback.
+                        During the CANSAT project's development, we successfully handled the technical integration and verified our prototype's functionality through various tests. We shared these successful results with the academic community through presentations at relevant departments in our university. These presentations offered a valuable opportunity to introduce our project to a wider audience and receive feedback. The insights gained from this feedback were highly constructive, reinforcing our design choices while also highlighting areas for improvement. Ultimately, the confidence and the technical skills honed during the CANSAT development were instrumental in our decision to take on the more ambitious KAYSAT project for the Teknofest competition.
                     </p>
                 </div>
                 <div class="media-image">
