--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="media-block media-block-wide-image space-above-lg">
                 <div class="media-text">
                     <p>
-                        During the CANSAT project's development, we successfully handled the technical integration and verified our prototype's functionality through various tests. We shared these successful results with the academic community through presentations at relevant departments in our university. These presentations offered a valuable opportunity to introduce our project to a wider audience and receive feedback. The insights gained from this feedback were highly constructive, reinforcing our design choices while also highlighting areas for improvement. Ultimately, the confidence and the technical skills honed during the CANSAT development were instrumental in our decision to take on the more ambitious KAYSat project for the Teknofest competition.
+                        During the CANSAT project's development, we successfully handled the technical integration and verified our prototype's functionality through various tests. We shared these successful results with the academic community through presentations at relevant departments in our university. These presentations offered a valuable opportunity to introduce our project to a wider audience and receive feedback. The insights gained from this feedback were highly constructive, reinforcing our design choices while also highlighting areas for improvement. Ultimately, the confidence and the technical skills honed during the CANSAT development were instrumental in our decision to take on the more ambitious KAYSAT project for the Teknofest competition.
                     </p>
                 </div>
                 <div class="media-image">
@@ -124,38 +124,38 @@
             </div>
 
             <div class="media-block">
-                <div class="media-image">
-                    <img src="images/Ncts3.jpg" alt="Yer istasyonu ve harita arayüzü">
-                </div>
                 <div class="media-text">
                     <h4>Field Test & Ground Station</h4>
                     <p>
                         Bu görselde, kablosuz haberleşme altyapısı ve veri toplama istasyonu bir arada görülüyor. Açık havada yapılan testlerde, geliştirilen sistemin yer istasyonuyla kurduğu bağlantı ve harita arayüzü dikkat çekiyor.
                     </p>
                 </div>
+                <div class="media-image">
+                    <img src="images/Ncts3.jpg" alt="Yer istasyonu ve harita arayüzü">
+                </div>
             </div>
         
             <div class="media-block">
+                <div class="media-image">
+                    <img src="images/Ncts4.jpeg" alt="Proje geliştirme ortamı">
+                </div>
                 <div class="media-text">
                     <h4>Development & Prototyping</h4>
                     <p>
                         Proje geliştirme sürecindeki çalışma ortamını yansıtan bu kare, elektronik bileşenlerin, prototip devrelerin ve ölçüm aletlerinin yoğunluğunu gözler önüne seriyor.
                     </p>
                 </div>
-                <div class="media-image">
-                    <img src="images/Ncts4.jpeg" alt="Proje geliştirme ortamı">
-                </div>
             </div>
         
             <div class="media-block">
-                <div class="media-image">
-                    <img src="images/firebase_data.png" alt="Firebase veritabanı anlık veri">
-                </div>
                 <div class="media-text">
                     <h4>Real-Time Data Storage</h4>
                     <p>
                         Bu ekran görüntüsü, veritabanına kaydedilen gerçek zamanlı telemetri verilerini temsil ediyor. JSON formatında alınan sensör verileri tarih ve zaman damgalarıyla listelenmektedir.
                     </p>
+                </div>
+                <div class="media-image">
+                    <img src="images/firebase_data.png" alt="Firebase veritabanı anlık veri">
                 </div>
             </div>
             <h4>Conclusion and Learnings</h4>
