--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
 
-            <div class="media-block">
+            <div class="media-block media-block-wider-text">
                 <div class="media-image">
                     <img src="images/Ncts5.jpeg" alt="Circuit Detail">
                 </div>
@@ -158,6 +158,7 @@
                     <img src="images/firebase_data.png" alt="Firebase veritabanı anlık veri">
                 </div>
             </div>
+
             <h4>Conclusion and Learnings</h4>
             <p>
                 This project has provided practical experience in embedded systems programming, sensor integration, power management, and wireless communication. The successful real-time transfer of data in JSON format to a Flask and Electron-based interface demonstrates a complete system integration.
