--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
             </div>
         
-            <div class="media-block">
+            <div class="media-block media-block-narrower-text">
                 <div class="media-image">
                     <img src="images/Ncts4.jpeg" alt="Proje geliştirme ortamı">
                 </div>
