--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="media-text">
                     <h4>Field Test & Ground Station</h4>
                     <p>
-                        Bu görselde, kablosuz haberleşme altyapısı ve veri toplama istasyonu bir arada görülüyor. Açık havada yapılan testlerde, geliştirilen sistemin yer istasyonuyla kurduğu bağlantı ve harita arayüzü dikkat çekiyor.
+                        This image shows the wireless communication infrastructure and the data acquisition station working together. During outdoor tests, the connection established between the developed system and the ground station, along with the map interface, is highlighted.
                     </p>
                 </div>
                 <div class="media-image">
@@ -142,8 +142,7 @@
                 <div class="media-text">
                     <h4>Development & Prototyping</h4>
                     <p>
-                        Proje geliştirme sürecindeki çalışma ortamını yansıtan bu kare, elektronik bileşenlerin, prototip devrelerin ve ölçüm aletlerinin yoğunluğunu gözler önüne seriyor.
-                    </p>
+                       Reflecting the work environment during the development process, this shot showcases the density of electronic components, prototype circuits, and measurement instruments.
                 </div>
             </div>
         
@@ -151,7 +150,7 @@
                 <div class="media-text">
                     <h4>Real-Time Data Storage</h4>
                     <p>
-                        Bu ekran görüntüsü, veritabanına kaydedilen gerçek zamanlı telemetri verilerini temsil ediyor. JSON formatında alınan sensör verileri tarih ve zaman damgalarıyla listelenmektedir.
+                        This screenshot represents the real-time telemetry data being logged to the database. The sensor data, received in JSON format, is listed with corresponding date and time stamps.
                     </p>
                 </div>
                 <div class="media-image">
