--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
 
-            <div class="media-block">
+            <div class="media-block media-block-narrower-text">
                 <div class="media-text">
                     <h4>Core Platform Capabilities</h4>
                     <ul>
