--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="media-text">
                     <h4>Real-Time Data Storage</h4>
                     <p>
-                        This screenshot represents the real-time telemetry data being logged to the database. The sensor data, received in JSON format, is listed with corresponding date and time stamps.
+                        This view showcases the real-time telemetry data being successfully logged to the Firebase database. Each data packet, received in JSON format, is meticulously recorded with a precise date and time stamp. This process not only ensures data integrity and traceability but also validates the successful operation of the entire end-to-end communication and storage system.
                     </p>
                 </div>
                 <div class="media-image">
