--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <header>
         <h1>Hello, I'm Ali Berkant Eker 👋</h1>
-        <p class="intro-text">As a master's student in Astronomy and Space Sciences at Erciyes University, I conduct research and develop various projects in the fields of embedded systems, telemetry, and satellite technologies. I also serve as the Team Captain of the KAYSat Model Satellite Team, working together with my teammates to bring our projects to life.</p>
+        <p class="intro-text">As a master's student in Astronomy and Space Sciences at Erciyes University, I conduct research and develop various projects in the fields of embedded systems, telemetry, and satellite technologies. I also serve as the Captain of the KAYSat Model Satellite Team, working with my teammates to bring our projects to life.</p>
     </header>
 
     <section class="team-section">
