--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="media-text">
                     <h4>Technical Specifications</h4>
                     <ul>
-                        <li><strong>Sensors:</strong> BME280, MH-Z19, MQ-4, MQ-9, MPU6050</li>
+                        <li><strong>Sensors:</strong> BME280, MH-Z19, MQ-4, MQ-9, MPU6050, INA219</li>
                         <li><strong>Positioning:</strong> GY-NEO6MV2 GPS Module</li>
                         <li><strong>Processor:</strong> Arduino Mega 2560 Pro Mini</li>
                         <li><strong>Communication:</strong> RF900 Ultra Long Range Radio Modem</li>
